src/test/ui/rfc1598-generic-associated-types/construct_with_other_type.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/construct_with_other_type.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/construct_with_other_type.rs:17:46
   |
LL |     type Baa<'a>: Deref<Target = <Self::Quux<'a> as Foo>::Bar<'a, 'static>>;
   |                                              ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/construct_with_other_type.rs:17:63
   |
LL |     type Baa<'a>: Deref<Target = <Self::Quux<'a> as Foo>::Bar<'a, 'static>>;
   |                                                               ^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/construct_with_other_type.rs:25:40
   |
LL |     type Baa<'a> = &'a <T as Foo>::Bar<'a, 'static>;
   |                                        ^^ lifetime argument not allowed

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0109`.
